# Yue-Chong

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  bot.py  pyproject.toml
docs/: deployment.md
personas/: default.yaml  default_dialect.yaml  lemuen.yaml
qq_rolebot/: __init__.py  admin.py  agent_runner.py  config.py  custom_faces.py  debug_trace.py  exception_notifier.py  guardrails.py  image_preprocessor.py  message_segments.py  model_client.py  outgoing.py  persona.py  persona_sources.py  policy.py  prompting.py  repeat_policy.py  reply_enhancer.py  serpapi_client.py  service.py  stickers.py  storage.py  tavily.py  temp_image_store.py  time_tool.py  tool_router.py  tool_runner.py  tts_client.py  vision_cache.py  vision_client.py  vision_pipeline.py  vision_resolver.py  vision_types.py  voice_policy.py  voice_service.py
scripts/: deploy_server.sh  evaluate_vision_pipeline.py  napcat_account_watchdog.py  probe_vision_pipeline.py  run_napcat_instance.sh  summarize_vision_traces.py
tests/: test_admin.py  test_agent_runner.py  test_config.py  test_custom_faces.py  test_debug_trace.py  test_deploy_script.py  test_evaluate_vision_pipeline.py  test_exception_notifier.py  test_image_preprocessor.py  test_message_segments.py  test_model_client.py  test_napcat_account_watchdog.py  test_outgoing.py  test_persona_prompt_guardrails.py  test_persona_sources.py  test_plugin_smoke.py  test_policy.py  test_probe_vision_pipeline.py  test_repeat_policy.py  test_reply_enhancer.py  test_serpapi_client.py  test_service.py  test_stickers.py  test_storage.py  (+14 more)
(+42 files in other folders)
