[project]
name = "qq-rolebot"
version = "0.1.0"
description = "NapCatQQ + NoneBot2 QQ group roleplay bot"
requires-python = ">=3.11"
dependencies = [
  "nonebot2[fastapi]>=2.4.0",
  "nonebot-adapter-onebot>=2.4.6",
  "aiosqlite>=0.20.0",
  "httpx>=0.27.0",
  "Pillow>=10.4.0",
  "boto3>=1.34.0",
  "PyYAML>=6.0.2",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["main.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
include = ["qq_rolebot*"]
